executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-cbul-ef.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: egressgateway-mtls-cbul-router-executor-unver
spec:
  configPatches:
    - applyTo: CLUSTER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          load_assignment:
            cluster_name: http_dynamic_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        envoy_internal_address:
                          server_listener_name: http_dynamic_listener
          name: http_dynamic_cluster
    - applyTo: CLUSTER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          cluster_type:
            name: envoy.clusters.dynamic_forward_proxy
            typed_config:
              '@type': >-
                type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
              dns_cache_config:
                dns_lookup_family: V4_ONLY
                name: dynamic_forward_proxy_cache_config
          lb_policy: CLUSTER_PROVIDED
          name: dynamic_forward_proxy_cluster
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': >-
                type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/istio/egressgateway-certs/tls.crt
                    private_key:
                      filename: /etc/istio/egressgateway-certs/tls.key
                validation_context:
                  trusted_ca:
                    filename: /etc/istio/egressgateway-ca-certs/root.crt
    - applyTo: LISTENER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8380
              protocol: TCP
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    '@type': >-
                      type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    access_log:
                      - name: envoy.access_loggers.stdout
                        typed_config:
                          '@type': >-
                            type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                    http_filters:
                      - name: envoy.filters.http.dynamic_forward_proxy
                        typed_config:
                          '@type': >-
                            type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                          dns_cache_config:
                            dns_lookup_family: V4_ONLY
                            name: dynamic_forward_proxy_cache_config
                      - name: envoy.filters.http.router
                        typed_config:
                          '@type': >-
                            type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - domains:
                            - '${global.platform.ufs.cbul.hosts.mask}:8443'
                          name: local_service
                          routes:
                            - match:
                                prefix: /
                              route:
                                cluster: dynamic_forward_proxy_cluster
                    stat_prefix: ingress_http
          name: dynamic_http_listener
  workloadSelector:
    labels:
      app: istio-egressgateway-router-executor-unver
