executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-cbul-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egressgateway-mtls-cbul-@fpi-name@-unver
spec:
  selector:
    istio: egressgateway-@fpi-name@-unver
  servers:
    - hosts:
        - '${global.platform.ufs.cbul.hosts.mask}'
      port:
        name: http-dynamic
        number: 8280
        protocol: HTTP
