executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-cbul-se.yaml
kind: ServiceEntry
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: egressgateway-mtls-cbul-@fpi-name@-unver
spec:
  exportTo:
    - .
  hosts:
    - '${global.platform.ufs.cbul.hosts.mask}'
  location: MESH_EXTERNAL
  ports:
    - name: http-cbul
      number: 8280
      protocol: HTTP
  resolution: NONE
