executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-cbul-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egressgateway-http-cbul-vs-router-executor-unver
spec:
  hosts:
    - '${global.platform.ufs.cbul.hosts.mask}'
  gateways:
    - mesh
    - egressgateway-mtls-cbul-router-executor-unver
  http:
    - match:
        - gateways:
            - mesh
          port: 8280
      route:
        - destination:
            host: egressgateway-router-executor-unver
            port:
              number: 8380
      retries:
        attempts: 0
