executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egressgateway-mtls-@fpi-name@-unver
spec:
  selector:
    istio: egressgateway-@fpi-name@-unver    # Селектор, который определяет каким gateway'ем будет обрабатываться этот конфиг;
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: ${@fpi-name@.ose.istio.egress.common.internal-port}
        protocol: HTTP
