executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-monm-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egressgateway-mtls-router-executor-monm-unver
spec:
  selector:
    istio: egressgateway-router-executor-unver
  servers:
    - hosts:
        - ${global.monitoring.store.host}
      port:
        name: http-monitoring
        number: ${global.monitoring.store.port}
        protocol: HTTP
