executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-monm-se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: egressgateway-mtls-@fpi-name@-monm-unver
spec:
  exportTo:
    - .
  hosts:
    - ${global.monitoring.store.host}
  location: MESH_EXTERNAL
  ports:
    - name: http-monitoring
      number: ${global.monitoring.store.port}
      protocol: HTTP
  resolution: DNS
