executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/egress-mtls-monm-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egressgateway-mtls-router-executor-monm-unver
spec:
  exportTo:
    - .
  gateways:
    - egressgateway-mtls-router-executor-monm-unver
    - mesh
  hosts:
    - ${global.monitoring.store.host}
  http:
    - match:
        - gateways:
            - mesh
          port: ${global.monitoring.store.port}
      route:
        - destination:
            host: egressgateway-router-executor-unver
            port:
              number: ${global.monitoring.store.port}
          weight: 100
      retries:
        attempts: 0
    - match:
        - gateways:
            - egressgateway-mtls-router-executor-monm-unver
          port: ${global.monitoring.store.port}
      route:
        - destination:
            host: ${global.monitoring.store.host}
            port:
              number: ${global.monitoring.store.port}
          weight: 100
      retries:
        attempts: 0
