executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/egress-tcp-se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: egressgateway-tcp-@fpi-name@-unver
spec:
  exportTo:
    - .
  hosts:
    - ignored
  location: MESH_EXTERNAL
  ports:
    # Порт, нужный всему набору Журналирование-Мониторинг-Аудит
    - name: tcp-kafka
      number: ${@fpi-name@.ose.istio.egress.se.tcp.kafkaPort.number}
      protocol: TCP
  resolution: NONE
